--- a/src/Sass/partials/_home.scss
+++ b/src/Sass/partials/_home.scss
@@ -1,6 +1,5 @@
 .home-container{
   display: flex;
-  height: 100vh;
   background-color: $hero-bg;
   padding: 20px;
   gap: 10px;
